--- a/AppShowMilhao/AppShowMilhao.csproj
+++ b/AppShowMilhao/AppShowMilhao.csproj
@@ -57,9 +57,35 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <None Remove="Resources\Images\logo.jpg" />
+	  <None Remove="Resources\raw\1000.wav" />
+	  <None Remove="Resources\raw\10000.wav" />
+	  <None Remove="Resources\raw\1000000.wav" />
+	  <None Remove="Resources\raw\100000a.wav" />
+	  <None Remove="Resources\raw\100000b.wav" />
+	  <None Remove="Resources\raw\2000.wav" />
+	  <None Remove="Resources\raw\20000.wav" />
+	  <None Remove="Resources\raw\200000.wav" />
+	  <None Remove="Resources\raw\3000.wav" />
+	  <None Remove="Resources\raw\30000.wav" />
+	  <None Remove="Resources\raw\300000.wav" />
+	  <None Remove="Resources\raw\4000.wav" />
+	  <None Remove="Resources\raw\40000.wav" />
+	  <None Remove="Resources\raw\400000.wav" />
+	  <None Remove="Resources\raw\5000.wav" />
+	  <None Remove="Resources\raw\50000.wav" />
+	  <None Remove="Resources\raw\500000.wav" />
+	  <None Remove="Resources\raw\abertura-show-do-milhao.mp3" />
+	  <None Remove="Resources\raw\errou.wav" />
+	  <None Remove="Resources\raw\ganhou.wav" />
+	  <None Remove="Resources\raw\parabens.wav" />
+	</ItemGroup>
+
+	<ItemGroup>
 		<PackageReference Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
 		<PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="$(MauiVersion)" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="8.0.0" />
+		<PackageReference Include="Plugin.Maui.Audio" Version="3.0.1" />
 	</ItemGroup>
 
 </Project>
